# ble-mesh-custom-sensor-model

./: CMakeLists.txt  Kconfig  README.md
example/: CMakeLists.txt
example/main/: CMakeLists.txt  board.c  board.h  main.c
examples/custom_sensor_client/: CMakeLists.txt  Makefile
examples/custom_sensor_client/main/: CMakeLists.txt  main.c
examples/custom_sensor_server/: CMakeLists.txt
examples/custom_sensor_server/main/: CMakeLists.txt  main.c
include/: custom_sensor_model_defs.h  mesh_client.h  mesh_device_app.h  mesh_server.h
src/: mesh_client.c  mesh_device_app.c  mesh_server.c
